
CONTRIB
    Added: get_imscp_master_sql_user_pwd.pl script: Print current i-MSCP master SQL user (imscp_user) password

DATABASE
    Fixed: Can't DROP 'domain_id'; check that column/key exists (Database update r267; fixed/repeated in r271)
    Fixed: Deprecated columns not removed while updating from some older versions (r270)

DISTRIBUTIONS
    Added: `libfile-chmod-perl` distribution package (all distributions -- Required by 3rd-party softwares)
    Added: `unzip` distribution package (all distributions -- required for correct symlinks handling (Composer))
    Added: Support for Debian 10/Buster (Experimental)
    Review: Avoid APT pinning whenever as possible (All distributions)
    Relaxed: Permissions policy on /etc/apt/apt.conf.d/* files -- Files must be world-readable

FRONTEND
    Added: Distribution and i-MSCP information in the system information page (admin UI)
    Added: New `mailType' and `forwardList' parameters for both `onBeforeAddMail' and `onAfterAddMail' events
    Added: Support for PSR-4 autoloading through PHP dependency manager (composer) autoloader
    Changed iMSCP\Application::getAutoloader() now return the Composer Composer\Autoload\ClassLoader instance
    Enhancement: Make use of application cache for caching of plugins metadata (lifetime: indefinitely till change)
    Enhancement: Make use of application cache for caching of resolved templates (TemplateEngine)
    Enhancement: PHP configuration level is now configurable through PHP editor (On a per reseller and customer basis)
    Enhancement: PHP error messages are now stored in the data/logs/errors.log file which is rotated on a daily basis
    Fixed: Both `onBeforeAddMail' and `onAfterAddMail' events should be triggered on default mail accounts creation
    Fixed: Couldn't execute /usr/local/lib/imscp_panel/imscp_panel_reopenlogs logrotate script
    Fixed: Couldn't parse static (inline|file) templates due to wrong conditional statement (TemplateEngine)