@@ -199,15 +199,28 @@ Support for distributions other than Debian like distributions will be added
 over the time. You're free to help us to implement the i-MSCP servers for your
 favorite distribution.
 
-#### Cron job server
+#### Cron server
 
-Support for `SYSTEMD.CRON(7)` has been added. `SYSTEMD.CRON(7)` is an alternative to
-the historical Vixie `CRON(8)` daemon. See the SYSTEMD.CRON(7) manpage for further details.
+Support for `SYSTEMD.CRON(7)` has been added. `SYSTEMD.CRON(7)` is an
+alternative to the historical Vixie `CRON(8)` daemon. See the SYSTEMD.CRON(7)
+manpage for further details.
 
-Note that the `SYSTEMD.CRON(7)` i-MSCP server implementation is not available under
-distributions that are not running SYSTEMD(1) as init system.
+Note that the `SYSTEMD.CRON(7)` i-MSCP server implementation is not available
+under distributions that are not running SYSTEMD(1) as init system.
 
-### SQL servers
+### Processing of i-MSCP's backend requests
+
+There are now two way to process the i-MSCP's backend requests:
+
+- Via the historical i-MSCP daemon: Backend requests are treated in real
+time by a daemon running in background
+- Via cron(8): Backend requests to process are looked-up and processed every 5
+minutes.
+
+Second choice will delay the treatement  but will fit better for a server that is
+highly busy.
+
+### SQL servers (Debian like distributions)
 
 Support for older SQL servers versions has been dropped. From now on, the
 following versions are supported:
